Fix info looks when notes are too big

--- a/css/index.css
+++ b/css/index.css
@@ -150,8 +150,8 @@ input{
 	margin-top: 1rem;
 }
 .bookCover{
-	width: 100px;
-	height: 100px;
+	width: 150px;
+	height: 150px;
 	font-family: 'Roboto', sans-serif;
 	color: white;
 	font-size: 1rem;
@@ -179,6 +179,8 @@ input{
 	padding: 0 8px;
 }
 #info-card h2{
+	display: flex;
+	flex-wrap: wrap;
 	text-align: left;
 	width: 100%;
 }
@@ -194,10 +196,18 @@ input{
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: flex-start;
+	-ms-overflow-style: none;  
 }
 #info-notes{
 	color: white;
 	font-family: 'Lato', sans-serif;
+	scrollbar-width: none; 
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#info-notes-container::-webkit-scrollbar {
+	display: none;
 }
 @media only screen and (max-width: 750px){
 	h1{
@@ -209,5 +219,9 @@ input{
 	}
 	button{
 		font-size: 1.5rem;
+	}
+	.bookCover{
+		width: 100px;
+		height: 100px;
 	}
 }
